[metadata]
name = ros-answers-miner
author = Victoria Jordan, Christopher Timperley
author-email = christimperley@googlemail.com
description-file = README.rst
license-file = LICENSE
url = https://github.com/squaresLab/ros-answers-miner

[tox]
envlist = py36, py37, py38

[testenv]
deps =
  mypy
  flake8
  pytest
commands =
  mypy src
  flake8 src
  pytest

[aliases]
test = pytest

[tool:pytest]
addopts = -rx -v

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True

[flake8]
ignore = W605,E302
max-line-length = 79

[options]
include_package_data = True
python_requires = >= 3.6
install_requires =
  attrs ~= 19.3.0
  loguru ~= 0.4.1
  lxml ~= 4.5.1
  requests ~= 2.24.0
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
test =
  pytest ~= 5.2.1
