[metadata]
name = ros-answers-miner
author = Victoria Jordan, Christopher Timperley
author-email = christimperley@googlemail.com
description-file = README.rst
license-file = LICENSE
url = https://github.com/squaresLab/ros-answers-miner

[tox]
envlist = py36, py37, py38

[testenv]
deps =
  mypy==0.780
  flake8==3.7.9
  pep8-naming==0.10.0
  pytest==5.3.0
commands =
  mypy src
  flake8 src

[tool:pytest]
addopts = -rx -v

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True

[flake8]
ignore = W605,E302
max-line-length = 79
per-file-ignores =
  src/ros_answers_miner/__init__.py: F401

[options]
include_package_data = True
python_requires = >= 3.6
install_requires =
  attrs ~= 19.3.0
  loguru ~= 0.4.1
  lxml ~= 4.5.1
  requests ~= 2.24.0
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  ros-answers-miner = ros_answers_miner.cli:main
